# PaletteProject

./: .gitignore  CMakeLists.txt  KMeans.cpp  KMeans.h  Picture.cpp  Picture.h  README.md  main.cpp
include/: KMeans.h  Picture.h
src/: CMakeLists.txt  KMeans.cpp  Picture.cpp  main.cpp
